<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.detailsScreen.SideDetails"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:background="@drawable/rounded_corner"
    android:paddingVertical="30dp"
    >

    <!-- TODO: Update blank fragment layout -->

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/humidity_hardcoded"
          android:layout_weight="0.3"
          android:textSize="22sp"
          android:textColor="@color/secondary_text"
          />
      <TextView
          android:id="@+id/humidity"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="90%"
          android:layout_weight="0.5"
          android:textSize="22sp"
          android:textAlignment="center"
          android:textColor="@color/white"
          />
  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pressure_hardcoded"
            android:layout_weight="0.3"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/secondary_text"
            />
        <TextView
            android:id="@+id/pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="996 hPa"
            android:layout_weight="0.5"
            android:textSize="@dimen/medium_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wind_hardcoded"
            android:layout_weight="0.3"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/secondary_text"
            />
        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="8 km/h E"
            android:layout_weight="0.5"
            android:textSize="@dimen/medium_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clouds_hardcoded"
            android:layout_weight="0.3"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/secondary_text"
            />
        <TextView
            android:id="@+id/clouds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="80%"
            android:layout_weight="0.5"
            android:textSize="@dimen/medium_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/visibility_hardcoded"
            android:layout_weight="0.3"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/secondary_text"
            />
        <TextView
            android:id="@+id/uvi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="3000"
            android:layout_weight="0.5"
            android:textSize="@dimen/medium_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
    </LinearLayout>
</LinearLayout>
</layout>